--- a/README
+++ b/README
@@ -13,7 +13,8 @@ The production version is the one on CTAN and ACM sites.
 Changes
 
 Version 1.87   CC license is allowed for non-acm documents and ACM Engage
-	       documents only	
+	       documents only
+	       New format acmcp for the cover page
 
 Version 1.86.  Empty country in affiliation now produces an error
                Bug fixes
