--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -257,11 +257,15 @@
 %% Links to code and data
 \acmCodeLink{https://github.com/borisveytsman/acmart}
 \acmDataLink{htps://zenodo.org/link}
-%% 
-\acmContributions{BT and GKMT designed the study; LT, VB, and AP
-  conducted the experiments, BR, HC, CP and JS analyzed the results,
-  JPK developed analytical predictions, all authors participated in
-  writing the manuscript.}
+%%
+%%
+%% Sometimes the addresses are too long to fit on the page.  In this
+%% case uncomment the lines below and fill them accodingly.
+%%
+%% \authorsaddresses{Corresponding author: Ben Trovato,
+%% \href{mailto:trovato@corporation.com}{trovato@corporation.com};
+%% Institute for Clarity in Documentation, P.O. Box 1212, Dublin,
+%% Ohio, USA, 43017-6221} 
 %%
 %</acmcp>
 %<*manuscript|acmsmall|acmsmall-submission|acmsmall-biblatex|acmlarge|acmtog|sigconf|sigconf-biblatex|authordraft|sigplan|sigchi|sigchi-a|acmsmall-conf|sigconf-i13n>
