Full dates for history

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1173,9 +1173,9 @@
 % is |Received| for the first date and |revised| for the subsequent
 % ones.  For example,
 % \begin{verbatim}
-% \received{February 2007}
-% \received[revised]{March 2009}
-% \received[accepted]{June 2009}
+% \received{20 February 2007}
+% \received[revised]{12 March 2009}
+% \received[accepted]{5 June 2009}
 % \end{verbatim}
 %
 %
