--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -377,6 +377,10 @@
 %</sigconf|authordraft|sigplan|acmsmall-conf|sigconf-i13n>
 %<*manuscript|acmsmall|acmsmall-submission|acmsmall-biblatex|acmlarge|acmtog|sigconf|sigconf-biblatex|authordraft|sigplan|sigchi|sigchi-a|acmsmall-conf|sigconf-i13n>
 
+\received{20 February 2007}
+\received[revised]{12 March 2009}
+\received[accepted]{5 June 2009}
+
 %%
 %% This command processes the author and affiliation and title
 %% information and builds the first part of the formatted document.
